# pretty-docker

./: .env.example  README.md  app.py  cards.py  pyproject.toml  requirements.txt  subprocess_docker.py  test2.py
pretty_docker/: cli.py  docker_ops.py  models.py  tui.py
tests/: test_docker_ops.py
