[project]
name = "pretty-docker"
version = "0.2.0"
description = "Docker container viewer - TUI and CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "drbash" },
]
dependencies = [
    "docker>=7.0",
    "textual>=8.0",
    "rich>=13.0",
]

[project.scripts]
pretty-docker = "pretty_docker.cli:main"
pretty-docker-tui = "pretty_docker.tui:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pretty_docker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
